Proper fix for overflow; add clear all button

--- a/style.css
+++ b/style.css
@@ -524,7 +524,7 @@ input#yearrange {
     /*padding: 0 18px;*/
     background-color: white;
     max-height: 0;
-    overflow: visible;
+    overflow: hidden;
     transition: max-height 0.4s ease-out;
   }
 
